[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "TargetTriple"
authors = [{name = "KOLANICH"}]
description = "Represents a target triple."
readme = "ReadMe.md"
keywords = ["package", "location"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/KOLANICH/TargetTriple.py"

[tool.setuptools]
zip-safe = true
packages = ["TargetTriple"]
include-package-data = false

[tool.setuptools_scm]
